--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,35 @@
+
 {% load socialaccount %}
 <html>
-<body>
+
+<body bgcolor="grey">
+    <center>
+        
+    
     <h1> Google Login </h1>
     {% if user.is_authenticated %}
         <p>Welcome, You are logged in as {{ user.username }}</p>
     {% else %}
         <a href="{% provider_login_url 'google' %}">Login With Google</a>
     {% endif %}
+    
+    <style>
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: rgba(27, 26, 26, 0.223);
+            color: white;
+            text-align: center;
+        }
+    </style>
+    
+    <div class="footer">
+        <p>Created by group A-029</p>
+    </div>
+
+    
+    </center>
 </body>
 </html>
