--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
     <h1> Google Login </h1>
     {% if user.is_authenticated %}
         <p>Welcome, You are logged in as {{ user.username }}</p>
+        <br/>
+        <a href="logout/"> Log out </a>
     {% else %}
         <a href="{% provider_login_url 'google' %}">Login With Google</a>
     {% endif %}
