--- a/templates/findallbydept.html
+++ b/templates/findallbydept.html
@@ -3,7 +3,7 @@
 
 <h1>We are in the {{department}} department</h1>
 {% for section in sections%}
-    <h4> We have a section</h4>
+    <h4> {{section.description}}</h4>
 {%endfor%}
 
 
