--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,93 @@
-
 {% load socialaccount %}
 <html>
 
 <body bgcolor="grey">
     <center>
-        
-    
-    <h1> Google Login </h1>
-    {% if user.is_authenticated %}
-        <p>Welcome, You are logged in as {{ user.username }}</p>
-        <br/>
-        <a href="logout/"> Log out </a>
-    {% else %}
-        <a href="{% provider_login_url 'google' %}">Login With Google</a>
-    {% endif %}
-    
-    <style>
-        .footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            background-color: rgba(27, 26, 26, 0.223);
-            color: white;
-            text-align: center;
-        }
-    </style>
-    
-    <div class="footer">
-        <p>Created by group A-029</p>
-    </div>
 
-    
+        {% if user.is_authenticated %}
+        <p>You are logged in as {{ user.username }}</p>
+        <br />
+        <p>
+        <div class="dropdown">
+            <button class="dropbtn">Department
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="/departments/ACCT">ACCT</a>
+                <a href="/departments/AIRS">AIRS</a>
+                <a href="/departments/ALAR">ALAR</a>
+            </div>
+        </div>
+        </p>
+        <br />
+        <a href="logout/"> Log out </a>
+        {% else %}
+        <h1> Google Login </h1>
+        <br />
+        <a href="{% provider_login_url 'google' %}">Login With Google</a>
+        {% endif %}
+
+        <style>
+            .footer {
+                position: fixed;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background-color: rgba(27, 26, 26, 0.223);
+                color: white;
+                text-align: center;
+            }
+
+            .dropbtn {
+                background-color: #04AA6D;
+                color: white;
+                padding: 16px;
+                font-size: 16px;
+                border: none;
+                cursor: pointer;
+            }
+
+            .dropdown {
+                position: relative;
+                display: inline-block;
+            }
+
+            .dropdown-content {
+                display: none;
+                position: relative;
+                right: 0;
+                background-color: #f9f9f9;
+                min-width: 160px;
+                box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+                z-index: 1;
+            }
+
+            .dropdown-content a {
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+            }
+
+            .dropdown-content a:hover {
+                background-color: #f1f1f1;
+            }
+
+            .dropdown:hover .dropdown-content {
+                display: block;
+            }
+
+            .dropdown:hover .dropbtn {
+                background-color: #3e8e41;
+            }
+        </style>
+
+        <div class="footer">
+            <p>Created by group A-029</p>
+        </div>
+
+
     </center>
 </body>
+
 </html>
