fixed syntax errors

--- a/templates/findallbydept.html
+++ b/templates/findallbydept.html
@@ -2,7 +2,7 @@
 <center>
 
     <body>
-        <h1>We are in the {{department}} department </h1>
+        <h1> {{department}} courses </h1>
         <p>
             {% for section in sections %}
             <br>
