--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,16 @@
 {% load socialaccount %}
-<html>
+
+
+
 
 <body bgcolor="grey">
     <center>
+        <html>
 
         {% if user.is_authenticated %}
-        <p>You are logged in as {{ user.username }}</p>
-        <br />
-        <p>
+        <!-- <p>You are logged in as {{ user.username }}</p> -->
+        <!-- <br /> -->
+        <!-- <p> -->
             
 <!DOCTYPE html>
 <html>
@@ -77,12 +80,25 @@
 <body>
 
     <div class="header">
-        <a href="#default" class="logo">CompanyLogo</a>
+        
+            
+            
+     
+            
+            
+        
+        <!-- <a href="#default" class="logo">CompanyLogo</a> -->
+        <!-- <img src="/templates/d.jpg"  style="width:100px;height:100px;"> -->
+        <!-- <h1>You are logged in as {{ user.username }}</h1> -->
         <div class="header-right">
             <a class="active" href="#home">Home</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
+            
         </div>
+        
+        <h1>    Welecome {{ user.username }}</h1>
+        
     </div>
     <br>
     <br>
