--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,9 @@
         <!-- <br /> -->
         <!-- <p> -->
 
+
+            <!-- header -->
+<!-- https://www.w3schools.com/howto/howto_css_responsive_header.asp -->
         <!DOCTYPE html>
         <html>
 
