--- a/templates/index.html
+++ b/templates/index.html
@@ -1,210 +1,178 @@
 {% load socialaccount %}
+<!DOCTYPE html>
+<html>
+{% if user.is_authenticated %}
+<!-- <p>You are logged in as {{ user.username }}</p> -->
+<!-- <br /> -->
 
+<!-- header -->
+<!-- https://www.w3schools.com/howto/howto_css_responsive_header.asp -->
+<head>
+    <title>New Lou's List</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
 
+        .header {
+            overflow: hidden;
+            background-color: #f1f1f1;
+            padding: 20px 10px;
+        }
+
+        .header a {
+            float: left;
+            color: black;
+            text-align: center;
+            padding: 12px;
+            text-decoration: none;
+            font-size: 18px;
+            line-height: 25px;
+            border-radius: 4px;
+        }
+
+        .header a.logo {
+            font-size: 25px;
+            font-weight: bold;
+        }
+
+        .header a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        .header a.active {
+            background-color: dodgerblue;
+            color: white;
+        }
+
+        .header-right {
+            float: right;
+        }
+
+        @media screen and (max-width: 500px) {
+            .header a {
+                float: none;
+                display: block;
+                text-align: left;
+            }
+
+            .header-right {
+                float: none;
+            }
+        }
+    </style>
+</head>
 
 <body bgcolor="grey">
-    <center>
-        <html>
-
-        {% if user.is_authenticated %}
-        <!-- <p>You are logged in as {{ user.username }}</p> -->
-        <!-- <br /> -->
-        <!-- <p> -->
-
-
-            <!-- header -->
-<!-- https://www.w3schools.com/howto/howto_css_responsive_header.asp -->
-        <!DOCTYPE html>
-        <html>
-
-        <head>
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <style>
-                * {
-                    box-sizing: border-box;
-                }
-
-                body {
-                    margin: 0;
-                    font-family: Arial, Helvetica, sans-serif;
-                }
-
-                .header {
-                    overflow: hidden;
-                    background-color: #f1f1f1;
-                    padding: 20px 10px;
-                }
-
-                .header a {
-                    float: left;
-                    color: black;
-                    text-align: center;
-                    padding: 12px;
-                    text-decoration: none;
-                    font-size: 18px;
-                    line-height: 25px;
-                    border-radius: 4px;
-                }
-
-                .header a.logo {
-                    font-size: 25px;
-                    font-weight: bold;
-                }
-
-                .header a:hover {
-                    background-color: #ddd;
-                    color: black;
-                }
-
-                .header a.active {
-                    background-color: dodgerblue;
-                    color: white;
-                }
-
-                .header-right {
-                    float: right;
-                }
-
-                @media screen and (max-width: 500px) {
-                    .header a {
-                        float: none;
-                        display: block;
-                        text-align: left;
-                    }
-
-                    .header-right {
-                        float: none;
-                    }
-                }
-            </style>
-        </head>
-
-        <body>
-
-            <div class="header">
-
-
-
-
-
-
-
-                <!-- <a href="#default" class="logo">CompanyLogo</a> -->
-                <!-- <img src="/templates/d.jpg"  style="width:100px;height:100px;"> -->
-                <!-- <h1>You are logged in as {{ user.username }}</h1> -->
-                <div class="header-right">
-                    <a class="active" href="#home">Home</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
-
-                </div>
-
-                <h1> Welecome {{ user.username }}</h1>
-
-            </div>
-            <br>
-            <br>
-
-
-            <div style="padding-left:20px">
-                <!-- Search bar begin -->
-                <!-- https://stackoverflow.com/questions/62348625/append-input-from-search-box-into-button-link -->
-                <script>
-                    function goToSearch() {
-                        window.location.href = '/departments/' + encodeURI(document.getElementById("tag_search").value)
-                    }
-
-                </script>
-                <html>
-                <div class="search">
-                    <form role="search" method="get" id="search">
-                        <div>
-                            <input type="text" value="" name="tag_search" id="tag_search" />
-                            <input type="button" value="Search" onclick="goToSearch()" />
-                        </div>
-                    </form>
-                </div>
-
-                </html>
-
-                <!-- Search bar end -->
-            </div>
-
-        </body>
-
-        </html>
-
-        </p>
-        <br />
-        <a href="logout/"> Log out </a>
-        {% else %}
-        <h1> Google Login </h1>
-        <br />
-        <a href="{% provider_login_url 'google' %}">Login With Google</a>
-        {% endif %}
-
-        <style>
-            .footer {
-                position: fixed;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-                background-color: rgba(27, 26, 26, 0.223);
-                color: white;
-                text-align: center;
-            }
-
-            .dropbtn {
-                background-color: #04AA6D;
-                color: white;
-                padding: 16px;
-                font-size: 16px;
-                border: none;
-                cursor: pointer;
-            }
-
-            .dropdown {
-                position: relative;
-                display: inline-block;
-            }
-
-            .dropdown-content {
-                display: none;
-                position: relative;
-                right: 0;
-                background-color: #f9f9f9;
-                min-width: 160px;
-                box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-                z-index: 1;
-            }
-
-            .dropdown-content a {
-                color: black;
-                padding: 12px 16px;
-                text-decoration: none;
-                display: block;
-            }
-
-            .dropdown-content a:hover {
-                background-color: #f1f1f1;
-            }
-
-            .dropdown:hover .dropdown-content {
-                display: block;
-            }
-
-            .dropdown:hover .dropbtn {
-                background-color: #3e8e41;
-            }
-        </style>
-
-        <div class="footer">
-            <p>Created by group A-029</p>
+    <h1>New Lou's List</h1>
+    <div class="header">
+        <!-- <h1>You are logged in as {{ user.username }}</h1> -->
+        <div class="header-right">
+            <a class="active" href="#home">Home</a>
+            <a href="#Search Page">Search Page</a>
+            <a href="#Departments">Departments</a>
         </div>
-
-
+        Welcome {{ user.username }}
+    </div>
+    <center>
+    <br>
+    <div style="padding-left:20px">
+        <!-- Search bar begin -->
+        <!-- https://stackoverflow.com/questions/62348625/append-input-from-search-box-into-button-link -->
+        <script>
+            function goToSearch() {
+                window.location.href = '/departments/' + encodeURI(document.getElementById("tag_search").value)
+            }
+        </script>
+        <div class="search">
+            <form role="search" method="get" id="search">
+                <div>
+                    Enter a department:
+                    <input type="text" value="" name="tag_search" id="tag_search"/>
+                    <input type="button" value="Search" onclick="goToSearch()" />
+                </div>
+            </form>
+        </div>
+        <!-- Search bar end -->
+    </div>
     </center>
+</body>
+
+<center>
+<br>
+<a href="logout/"> Log out </a>
+{% else %}
+<h1> Google Login </h1>
+<br>
+<a href="{% provider_login_url 'google' %}">Login With Google</a>
+{% endif %}
+</center>
+
+<style>
+    .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: rgba(27, 26, 26, 0.223);
+        color: white;
+        text-align: center;
+    }
+
+    .dropbtn {
+        background-color: #04AA6D;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+    }
+
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: relative;
+        right: 0;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #f1f1f1;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    .dropdown:hover .dropbtn {
+        background-color: #3e8e41;
+    }
+</style>
+
+<div class="footer">
+    <p>Created by group A-029</p>
+</div>
 </body>
 
 </html>
