--- a/templates/des.html
+++ b/templates/des.html
@@ -1,20 +1,35 @@
 <!-- Need to reformat start and end times -->
 
 <html>
-    {% for section in sections %}
-        {% if section.instructor.name == "-" %}
-            <h2> To be announced </h2>            
-        {% else %}
-            <h3> {{section.instructor.name}} </h3>
-        {% endif %}
-        Course Number: {{section.course_number}} | {{section.course_section}} | {{section.component}} ({{section.units}} units) | 
-        {{section.enrollment_total}}/{{section.class_capacity}} ({{section.enrollment_available}} seats available)
-        <br/>
-        {% for meeting in meetings %} 
-            {% if meeting.section == section %} 
-                {{meeting.days}} | {{meeting.start_time}} | {{meeting.end_time}} | {{meeting.facility_description}}
+    <body>
+        <div class="container mt-3">
+            {% for section in sections %}
+                {% if section.instructor.name == "-" %}
+                    <h1>To be announced</h1>      
+                {% else %}
+                    <h1>{{section.instructor.name}}</h1>
+                {% endif %}
+                <ul class="list-group list-group-light list-group-small">
+                    <li class="list-group-item"> <strong>Course Number:</strong> {{section.course_number}}</li>
+                    <li class="list-group-item"> <strong>Course Section:</strong> {{section.course_section}}</li>
+                    <li class="list-group-item"> <strong>Section Component (# of Units):</strong> {{section.component}} ({{section.units}} units) </li>
+                    <li class="list-group-item"> <strong>Total Enrollment/Class Capacity:</strong> {{section.enrollment_total}}/{{section.class_capacity}} ({{section.enrollment_available}} seats available)</li>
+                </ul>
                 <br/>
-            {% endif %} 
-        {% endfor %}
-    {% endfor %}
+                {% for meeting in meetings %} 
+                    {% if meeting.section == section %} 
+                    <ul class="list-group list-group-light list-group-small"></ul>    
+                        <li class="list-group-item"> <strong>Meeting Days:</strong> {{meeting.days}} </li>
+                        <li class="list-group-item"> <strong>Meeting Start Time:</strong> {{meeting.start_time}} </li>
+                        <li class="list-group-item"> <strong>Meetin End Time:</strong> {{meeting.end_time}} </li>
+                        <li class="list-group-item"> <strong>Location:</strong> {{meeting.facility_description}} </li>
+                    </ul>    
+                        <br/>
+                    {% endif %} 
+                {% endfor %}
+            {% endfor %}
+        </div>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </body>
 </html>
