--- a/templates/index.html
+++ b/templates/index.html
@@ -68,19 +68,28 @@
             }
         }
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" rel="stylesheet">
 </head>
 
 <body bgcolor="grey">
     <h1>New Lou's List</h1>
-    <div class="header">
-        <!-- <h1>You are logged in as {{ user.username }}</h1> -->
-        <div class="header-right">
-            <a class="active" href="#home">Home</a>
-            <a href="#Search Page">Search Page</a>
-            <a href="#Departments">Departments</a>
+
+    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <!-- <h1>You are logged in as {{ user.username }}</h1> -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="#home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Search Page">Search Page</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Departments">Departments</a>
+                </li>
+            </ul>
         </div>
-        Welcome {{ user.username }}
-    </div>
+    </nav>
     <center>
     <br>
     <div style="padding-left:20px">
@@ -94,7 +103,7 @@
         <div class="search">
             <form role="search" method="get" id="search">
                 <div>
-                    Enter a department:
+                    <p> <strong> Enter a department: </strong> </p>
                     <input type="text" value="" name="tag_search" id="tag_search"/>
                     <input type="button" value="Search" onclick="goToSearch()" />
                 </div>
@@ -103,11 +112,12 @@
         <!-- Search bar end -->
     </div>
     </center>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 <center>
 <br>
-<a href="logout/"> Log out </a>
+<a href="logout/" class="btn btn-primary"> Log out </a>
 {% else %}
 <h1> Google Login </h1>
 <br>
@@ -171,7 +181,7 @@
 </style>
 
 <div class="footer">
-    <p>Created by group A-029</p>
+    <p>Created by Group A-29</p>
 </div>
 </body>
 
