--- a/templates/des.html
+++ b/templates/des.html
@@ -1,4 +1,6 @@
 <!-- Need to reformat start and end times -->
+{% extends 'base.html' %}
+{% block content %}
 
 <html>
     <body>
@@ -33,3 +35,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
+
+{% endblock content %}
