--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,7 @@
+{% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
+
 <div class="content-section col-lg-12 col-md-12 col-sm-12 tutorial-style" style="min-height:65vh;">
     <legend class="border-bottom mb-4">Profile Information:</legend>
     <form method="POST" enctype="multipart/form-data">
@@ -35,4 +37,5 @@
         {% endif %}
     </form>
 </div>
+
 {% endblock content %}
