--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,16 +7,8 @@
 
 {% block content %}
 
-<div class="container"
-<div class = "col-sm-6 col-sm-offset-3"
-
-
-
-
-
-
-
-</div>
+<div class="container">
+<div class = "col-sm-6 col-sm-offset-3">
 
 <h1>{% trans "Sign In" %}</h1>
 
