--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -2,40 +2,44 @@
 <html>
   <head>
     <title>{% block head_title %}{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <style>
+      .form-group {
+        margin-top: 10px;
+      }
+    </style>
     {% block extra_head %}
     {% endblock %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
     {% block body %}
 
     {% if messages %}
-    <div>
-      <strong>Messages:</strong>
-      <ul>
+      <div class="p-2">
         {% for message in messages %}
-        <li>{{message}}</li>
+          <div class="text-center border-bottom">{{message}}</div>
         {% endfor %}
-      </ul>
-    </div>
+      </div>
     {% endif %}
 
-    <div>
-      <strong>Menu:</strong>
-      <ul>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
-        <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
-        {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
-        {% endif %}
-      </ul>
+    <div class="p-3 mb-3 bg-dark">
+      <div class="container d-flex justify-content-between">
+          {% if user.is_authenticated %}
+          <div><a class="text-light" href="{% url 'account_email' %}">Change E-mail</a></div>
+          <div><a class="text-light" href="{% url 'home' %}">Home</a></div>
+          <div><a class="text-light" href="{% url 'account_logout' %}">Sign Out</a></div>
+          {% else %}
+          <div><a class="text-light" href="{% url 'account_login' %}">Sign In</a></div>
+          <div><a class="text-light" href="{% url 'account_signup' %}">Sign Up</a></div>
+          {% endif %}
+      </div>
     </div>
     {% block content %}
     {% endblock %}
     {% endblock %}
     {% block extra_body %}
     {% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
 </html>
