--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -36,7 +36,7 @@
     <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
     {% endif %}
   </div>
-  <div class="wrapper">
+  <div class="text-center">
     <div class="col-md-6 offset-md-3">
       <form class="login" method="POST" action="{% url 'account_login' %}">
           {% csrf_token %}
