connect profile to user

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,6 @@
 {% load socialaccount %}
 
 <!DOCTYPE html>
-{% if user.is_authenticated %}
 
 <head>
     <title>New Lou's List</title>
@@ -71,6 +70,7 @@
 
 <body bgcolor="grey">
     <h1>New Lou's List</h1>
+    {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <div class="container-fluid">
             <ul class="navbar-nav">
@@ -83,7 +83,7 @@
                         Profile
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/profile/{{user.username}}">Update Information</a></li>
+                        <li><a class="dropdown-item" href="/profile/">Update Information</a></li>
                         <li><a class="dropdown-item" href="#">Add friends</a></li>
                         <li>
                             <hr class="dropdown-divider">
@@ -97,6 +97,7 @@
             </ul>
         </div>
     </nav>
+    {% endif %}
     {% block content %}
 
     {% endblock content %}
@@ -154,12 +155,9 @@
             background-color: #3e8e41;
         }
     </style>
+    {% if user.is_authenticated %}
     <div class="footer">
         <p>Created by Group A-29</p>
     </div>
+    {% endif %}
 </body>
-{% else %}
-<h1> Create an account to continue </h1>
-<br>
-<a href="{% provider_login_url 'google' %}">Create an account with Google</a>
-{% endif %}
