--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,41 +1,44 @@
-{% extends 'base.html' %}
-{% load crispy_forms_tags %}
+{% extends "base.html" %}
+{% block title %}Profile Page{% endblock title %}
 {% block content %}
-
-<div class="content-section col-lg-12 col-md-12 col-sm-12 tutorial-style" style="min-height:65vh;">
-    <legend class="border-bottom mb-4">Profile Information:</legend>
-    <form method="POST" enctype="multipart/form-data">
+<div class="row my-3 p-3">
+    <img class="rounded-circle account-img" src="{{ user.profile.avatar.url }} " style="cursor: pointer;" />
+</div>
+{% if user_form.errors %}
+<div class="alert alert-danger alert-dismissible" role="alert">
+    <div id="form_errors">
+        {% for key, value in user_form.errors.items %}
+        <strong>{{ value }}</strong>
+        {% endfor %}
+    </div>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+{% endif %}
+<div class="form-content">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <div class="media">
-            <div class="media-body">
-                <h2 class="account-heading">{{ form.instance.username }}
-                    <small class="text-muted">({{ form.instance.status }})</small>
-                </h2>
-                <p class="text-secondary">{{ form.instance.first_name }} {{ form.instance.last_name }}</p>
-                <p class="text-secondary">{{ form.instance.email }}</p>
-                <!-- <p class="text-secondary">{{ form.instance.description }}</p> -->
+        <div class="form-row">
+            <div class="col-md-5">
+                <div class="form-group">
+                    <label class="small mb-1">Username:</label>
+                    {{ user_form.username }}
+                    <label class="small mb-1">Email:</label>
+                    {{ user_form.email }}
+                </div>
+                <div class="form-group">
+                    <a href="{% url 'password_change' %}">Change Password</a>
+                    <hr>
+                    <label class="small mb-1">Change Avatar:</label>
+                    {{ profile_form.avatar }}
+                </div>
+                <label class="small mb-1">Bio:</label> {{ profile_form.bio }}
             </div>
         </div>
-
-        {% if user.username == form.instance.username %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Edit Profile Information</legend>
-                <div class="form-row">
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.first_name|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.last_name|as_crispy_field }}
-                    </div>
-                </div> 
-                {{ form.email|as_crispy_field }}
-                <a href="/">Change password?</a>
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Update</button>
-            </div>
-        {% endif %}
+        <br><br>
+        <button type="submit" class="btn btn-dark btn-lg">Save Changes</button>
+        <button type="reset" class="btn btn-dark btn-lg">Reset</button>
     </form>
 </div>
-
 {% endblock content %}
