--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,17 @@
 {% load socialaccount %}
 
 <!DOCTYPE html>
-
+<div class="p-3 mb-3 bg-dark">
+    <div class="container d-flex justify-content-between">
+        {% if user.is_authenticated %}
+        <div><a class="text-light" href="{% url 'index' %}">Home</a></div>
+        <div><a class="text-light" href="{% url 'logout' %}">Sign Out</a></div>
+        {% else %}
+        <div><a class="text-light" href="{% url 'login' %}">Sign In</a></div>
+        <div><a class="text-light" href="{% url 'login' %}">Sign Up</a></div>
+        {% endif %}
+    </div>
+  </div>
 <head>
     <title>New Lou's List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -160,4 +170,5 @@
         <p>Created by Group A-29</p>
     </div>
     {% endif %}
+
 </body>
