--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
 <div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
         <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">{{user.first_name}} {{user.last_name}}</span><span class="text-black-50">{{user.email}}</span><span> </span></div>
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src=https://images.squarespace-cdn.com/content/v1/56d1b9ac7da24f7ba207af95/1585412370757-LZCOZGKQOBC765JY93O3/profile-anonymous.jpg><span class="font-weight-bold">{{user.first_name}} {{user.last_name}}</span><span class="text-black-50">{{user.email}}</span><span> </span></div>
         </div>
         <div class="col-md-5 border-right">
             <div class="p-3 py-5">
@@ -21,7 +21,11 @@
                     <div class="col-md-12"><label class="labels">Email</label>{{user_form.email}}
                     <a href="{% url 'password_change' %}">Change Password</a>
                 </div>
+                <div class="row mt-4">
+                    <div class="col-md-12"><label class="labels">About Me:</label>{{profile_form.bio}}</div>
                 <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
+                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" style="background: Red;" type="button">Reset</button></div>
+
             </div>
         </div>
 </div>
@@ -29,3 +33,20 @@
 </div>
 </div>
 {% endblock content %}
+<li class = "nav-item"><a class = "nav-link active" href="/profile/">Logout</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Profile
+        
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="/profile/">Update Information</a></li>
+                        <li><a class="dropdown-item" href="#">Add friends</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="logout/">Logout</a></li>
+                    </ul>
+                </li>
+
