--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,6 @@
 {% load socialaccount %}
 
 <!DOCTYPE html>
-
 <head>
     <title>New Lou's List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,7 +67,27 @@
         rel="stylesheet">
 </head>
 
-<body bgcolor="grey">
+<body backgroundcolor="grey">
+    {% if user.is_authenticated %}
+    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">New Lou's List</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/search/">Home</a>
+                </li>
+                <li class = "nav-item"><a class = "nav-link active" href="/profile/">Profile</a></li>
+                <li class = "nav-item"><a class = "nav-link active" href="/profile/">Add Friends</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Departments">Departments</a>
+                 <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Sign Out</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    {% endif %}
+    {% block content %}
+
+    {% endblock content %}
     <style>
         .footer {
             position: fixed;
@@ -124,22 +143,11 @@
             background-color: #3e8e41;
         }
     </style>
-  <div class="p-3 mb-3 bg-dark">
-    <div class="container d-flex justify-content-between">
-        {% if user.is_authenticated %}
-        <li class="nav-item">
-            <a class="nav-link active" href="/search/">Home</a>
-        </li>
-        <li class = "nav-item"><a class = "nav-link active" href="/profile/">Profile</a></li>
-        <li class = "nav-item"><a class = "nav-link active" href="/profile/">Add Friends</a></li>
-        <li class="nav-item"><a class="nav-link active" href="#Departments">Departments</a>
-            <li class="nav-item"><a class="nav-link active" href="{% url 'logout' %}">Logout</a>
-        </li>
-        <br>
+    {% if user.is_authenticated %}
+    <br>
     <div class="footer">
         <p>Created by Group A-29</p>
     </div>
-        {% endif %}
-    </div>
-  </div>
+    {% endif %}
+
 </body>
