log out page cleaned up

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,8 +78,8 @@
                 </li>
                 <li class = "nav-item"><a class = "nav-link active" href="/profile/">Profile</a></li>
                 <li class = "nav-item"><a class = "nav-link active" href="/profile/">Add Friends</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Departments">Departments</a>
-                 <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Sign Out</a>
+                <li class="nav-item"><a class="nav-link active" href="#Departments">Departments</a>
+                 <li class="nav-item"><a class="nav-link active" href="{% url 'logout' %}">Sign Out</a>
                 </li>
             </ul>
         </div>
