--- a/templates/des.html
+++ b/templates/des.html
@@ -23,17 +23,19 @@
                     <ul class="list-group list-group-light list-group-small"></ul>    
                         <li class="list-group-item"> <strong>Meeting Days:</strong> {{meeting.days}} </li>
                         <li class="list-group-item"> <strong>Meeting Start Time:</strong> {{meeting.start_time}} </li>
-                        <li class="list-group-item"> <strong>Meetin End Time:</strong> {{meeting.end_time}} </li>
+                        <li class="list-group-item"> <strong>Meeting End Time:</strong> {{meeting.end_time}} </li>
                         <li class="list-group-item"> <strong>Location:</strong> {{meeting.facility_description}} </li>
                     </ul>    
                         <br/>
                     {% endif %} 
                 {% endfor %}
+                <a href="#" class="btn"> hereeeeee</a>
             {% endfor %}
         </div>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
+    
 </html>
 
 {% endblock content %}
