--- a/templates/base.html
+++ b/templates/base.html
@@ -71,14 +71,14 @@
     {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">New Lou's List</a>
+            <a class="navbar-brand" href="/search/">New Lou's List</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" href="/search/">Home</a>
                 </li>
                 <li class = "nav-item"><a class = "nav-link active" href="/profile/">Profile</a></li>
                 <li class = "nav-item"><a class = "nav-link active" href="/profile/">Add Friends</a></li>
-                <li class="nav-item"><a class="nav-link active" href="#Departments">Departments</a>
+                <li class="nav-item"><a class="nav-link active" href="/departments/">Departments</a>
                  <li class="nav-item"><a class="nav-link active" href="{% url 'logout' %}">Sign Out</a>
                 </li>
             </ul>
