centered department on department page

--- a/templates/findallbydept.html
+++ b/templates/findallbydept.html
@@ -3,7 +3,8 @@
 
 <html>
     <body>
-        <h1> {{department}} courses </h1>
+
+        <h1 class="text-center"> {{department}} courses </h1>
         <div class="container">
             <ul class="list-group list-group-light list-group-small">
                 {% for section in sections %}
