--- a/templates/home.html
+++ b/templates/home.html
@@ -66,6 +66,7 @@
 </head>
 
 <body>
+    <center>
     <div class="jumbotron">
         <h1 class="display-4">Welcome to the New Lou's List</h1>
         {% if user.is_authenticated %}
@@ -84,4 +85,5 @@
         {% endif %}
         </p>
     </div>
+</center>
 </body>
