--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
                     <a class="nav-link active" href="/search">Home</a>
                 </li>
                 <li class = "nav-item"><a class = "nav-link active" href="/profile/">Profile</a></li>
-                <li class = "nav-item"><a class = "nav-link active" href="/profile/">Add Friends</a></li>
+                <li class = "nav-item"><a class = "nav-link active" href="/search/saved_courses/">Saved Courses</a></li>
                 <li class="nav-item"><a class="nav-link active" href="/departments/">Departments</a>
                  <li class="nav-item"><a class="nav-link active" href="{% url 'logout' %}">Sign Out</a>
                 </li>
