Search by profile now

--- a/templates/search_users_results.html
+++ b/templates/search_users_results.html
@@ -7,9 +7,9 @@
 
 <html>
 <ul>
-    {% for user in object_list %}
+    {% for profile in object_list %}
     <li>
-      {{ user.username }}, {{ user.email }}
+      {{ profile.user.username }}, {{profile.user.email}}, {{ profile.year }}
     </li>
   {% endfor %}
 </ul>
