--- a/templates/search_users_page.html
+++ b/templates/search_users_page.html
@@ -6,11 +6,14 @@
 {% block content %}
 
 <html>
+<center>
 <h1> Search for a User </h1>
 
 <form action="{% url 'search_users_results_view' %}" method="get">
     <input name="q" type="text" placeholder="Search..."/>
 </form>
+
+<center>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
