--- a/templates/saved_courses.html
+++ b/templates/saved_courses.html
@@ -4,20 +4,45 @@
 <html>
 
 <body>
-    <h1 class="text-center"> Saved Courses </h1>
     <div class="container">
-        <ul class="list-group list-group-light list-group-small" id="courses">
-            {% for section in sections %}
-            <a href="/departments/{{section.subject}}/{{section.catalog_number}}/{{section.description}}/info">
-                <li class="list-group-item" name="course"> {{section.subject}} {{section.catalog_number}}: {{section.description}}
+        <h1 class=""> Saved Courses </h1>
+        {% if sections%}
+        {%for section in sections%}
+            <ul class="list-group">
+                <li class="list-group-item active" aria-current="true">{{section.course}} </li>
+                <li class="list-group-item py-0"> 
+                    <div class="row py-1">
+                        <div class="col-1">{{section.course_number}}-{{section.course_section}}</div>
+                        <div class="col-1">{{section.units}} Unit {{section.component}}</div>
+                        <div class="col-1">{{section.enrollment_total}} / {{section.class_capacity}}</div>
+                        <div class="col-2">{{section.instructor_name}}</div>
+                        <div class="col-4">
+                            {% for meeting in section.get_meetings%}
+                                <div >{{meeting}} | {{meeting.facility_description}}</div>
+                            {%endfor%}
+                        </div>
+        
+                        <div class="col-1">
+                            <form class="" action="{% url 'unsave_section' %}" method="post">
+                                {% csrf_token %}
+                                <input type="hidden" name="next" value="{{request.path}}"/>
+                                <button class="btn btn-outline-primary py-0" name="section_to_unsave" type="submit" value={{section.course_number}}>Unsave</button>
+                            </form>
+            
+                        </div> 
+        
+                    </div>
+
                 </li>
-            </a>
-            {%endfor%}
-        </ul>
-        {% if not sections %}
-        </br>
-        <center>You have not saved any courses yet</center>
-        {% endif %}
+
+            </ul>
+
+        {%endfor%}
+        {%else%}
+            <p class="text-danger">No Saved Couses!</p>
+
+        {%endif%}
+        
     </div>
 </body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,3 +55,41 @@
 </html>
 
 {% endblock content %}
+
+
+{% comment %} <ul class="list-group">
+    <li class="list-group-item active" aria-current="true"> {{course}}</li>
+    {%for section in course.section_set.all%}
+        <li class="list-group-item py-0">
+            <div class="row py-1">
+                <div class="col-1">{{section.course_number}}-{{section.course_section}}</div>
+                <div class="col-1">{{section.units}} Unit {{section.component}}</div>
+                <div class="col-1">{{section.enrollment_total}} / {{section.class_capacity}}</div>
+                <div class="col-2">{{section.instructor_name}}</div>
+                <div class="col-4">
+                    {% for meeting in section.get_meetings%}
+                        <div >{{meeting}} | {{meeting.facility_description}}</div>
+                    {%endfor%}
+                </div>
+
+                <div class="col-1">
+                    {%if section in profile.saved_sections.all%}
+                        <form class="" action="{% url 'unsave_section' %}" method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="next" value="{{request.path}}"/>
+                            <button class="btn btn-outline-primary py-0" name="section_to_unsave" type="submit" value={{section.course_number}}>Unsave</button>
+                        </form>
+                    {% else %}
+                        <form action="{% url 'save_section' %}" method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="next" value="{{request.path}}"/>
+                            <button class="btn btn-primary py-0" name="section_to_save" type="submit" value={{section.course_number}}>Save</button>
+                        </form>
+                    {%endif%}
+                </div> 
+
+            </div>
+            
+        </li>
+    {%endfor%}
+</ul> {% endcomment %}
