--- a/templates/display_department.html
+++ b/templates/display_department.html
@@ -34,10 +34,10 @@
                                     <div >{{meeting}} | {{meeting.facility_description}}</div>
                                 {%endfor%}
                             </div>
-                            <div class="col-1">
+                            <div class="col-2">
                                 <form class="" action="{% url 'course_page' course.subject course.catalog_number%}" method="get">
                                     {% csrf_token %}
-                                    <button class="btn btn-outline-primary py-0" name="" type="submit">Info</button>
+                                    <button class="btn btn-outline-primary py-0" name="" type="submit">More Info</button>
                                 </form>
 
                             </div>
